--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,346 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+    font-family: Helvetica;
+    margin: 0;
+    background-color: #E5E5E5;
+}
+button {
+    cursor: pointer;
+}
+.dark-layout{
+    position: absolute;
+    width: 100vw;
+    height: 100vw;
+    z-index: 109;
+
+    justify-content: center;
+    display: flex;
+    background: rgba(0, 0, 0, 0.6);
+}
+.delete-box{
+    width: 30%;
+    height: fit-content;
+    background-color: white;
+    border-radius: 3px;
+    margin-top: 263px;
+    text-align: -webkit-center;
+        padding-top: 35px;
+    padding-bottom: 25px;
+}
+.delete-select{
+    display: flex;
+    justify-content: space-evenly;
+}
+.tidak-button{
+    background-color: #0D28A6;
+    color: white;
+    width: 25%;
+    height: 2vw;
+    border-style: none;
+}
+.ya-button{
+    background-color: white;
+    border-color: #0D28A6;
+    width: 25%;
+    height: 2vw;
+    color: #0D28A6;
+   
+}
+.saved{
+    height: 7vh;
+    width: 30vw;
+    background-color: #5CB85F;
+    border-radius: 3px;
+    color: white;
+    z-index: 10;
+    margin-left: 15%;
+    text-align-last: center;
+}
+.layout{
+    display: flex;
+}
+.left-body{
+height: 100vw;
+background-color: #0D28A6;
+width: fit-content;
+padding: 0 10px;
+text-align: center;
+}
+.box-home{
+background-color: #CFD4ED;
+width: 30px;
+height: 30px;
+margin-bottom: 25px;
+align-self: center;
+margin-top: 10px;
+}
+.side-item{
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+.side-item i{
+font-size: 1.5rem;
 }
 
-a {
-  color: #00B7FF;
+.side-item p{
+    margin-top: 6px;
+}
+.right-body{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.navbar{
+    height: fit-content;
+    background-color: white;
+    box-shadow:  0 2px 25px -5px rgba(115,115,115,0.75);
+    padding: 16px 10px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 100;
+}
+.nav-left{
+    display: flex;
+}
+.nav-right{
+    display: flex;
+}
+.nav-right input{
+    border-color: #D0D0D0;
+    border-radius: 3px;
+    width: 95px;
+    height: 33px;
+}
+.nav-right button{
+    width: 60px;
+    height: 33px;
+    border-radius: 3px;
+    color: #0D28A6;
+    border-color: #0D28A6;
+    background-color: white;
+  margin: 0;
+}
+
+
+.user-icon{
+    border-radius: 50%;
+    height: 33px;
+    width: 33px;
+    background-color: #0D28A6;
+    margin-left: 19px;
+}
+.user-icon p{
+    margin: 0;
+    font-size: 28px;
+    text-align: center;
+    color: white;
+}
+.username{
+    margin: 0;
+    padding-top: 9px;
+    padding-left: 5px;
+}
+.nav-right i{
+    font-size: 21px;
+    padding-top: 7px;
+    padding-left: 10px!important;
+}
+.box-logo{
+background-color: #CFD4ED;
+width: 95px;
+height: 33px;
+}
+.navbar i{
+line-height: unset;
+padding-left: 119px;
+}
+.rbody-main{
+    display: flex;
+
+}
+.rbody-left{
+    background-color: white;
+  height: 100vw;
+    width: 15vw;
+    display: flex;
+    flex-direction: column;
+    padding-top: 6px;
+}
+
+.rbody-left p{
+    padding-top: 12px;
+    padding-left: 10px;
+    font-weight: 700;
+    color: #8A8A8A;
+}
+
+.rbody-right{
+    padding: 10px;
+    width: -webkit-fill-available;
+}
+.rbody1{
+    display: flex;
+}
+.rbody1 i {
+    padding: 16px 5px 0 5px;
+}
+
+.bold{
+    font-weight: 700;
+}
+
+.rbody2{
+    display: flex;
+    justify-content: space-between;
+}
+.rbody2 button{
+    height: 33px;
+    padding: 4px 10px;
+    border-radius: 3px;
+    background-color: #0D28A6;
+    color: white;
+    border-style: none;
+}
+.rbody3{
+    display: flex;
+    margin-bottom: 10px;
+}
+.rbody3 button{
+    padding: 5px;
+    border-radius: 3px;
+    border-color: #0D28A6;
+    background-color: #E5E5E5;
+    color: #0D28A6;
+    margin-right: 10px;
+    
+}
+.rbody4{
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+}
+.car{
+    width: 30%;
+    height: fit-content;
+    background-color: white;
+    border-radius: 3px;
+    padding: 15px;
+    margin-bottom: 8px;
+    margin-right: 5px;
+}
+.car-align{
+    text-align-last: center;
+}
+.car-align img{
+    height: 225px;
+    width: 100%;
+    border-radius: 3px;
+}
+
+.thin{
+    font-weight: 300;
+}
+.delete-button{
+    width: 47%;
+    height: 45px;
+    border-radius: 3px;
+    border-color: #FA2C5A;
+    padding: 10px;
+    color: #FA2C5A;
+    font-weight: 700;
+    background-color: white;
+    font-size: 20px;
+  
+}
+.edit-button{
+    width: 47%;
+    height: 45px;
+    border-radius: 3px;
+    border-color: #5CB85F;
+    padding: 10px;
+    color: white;
+    font-weight: 700;
+    background-color: #5CB85F;
+    font-size: 20px;
+    border-style: none;
+}
+
+/* form page */
+.add-rbody-right{
+    padding: 10px;
+    width: -webkit-fill-available;
+}
+.add-rbody1{
+    display: flex;
+}
+.add-rbody1 p{
+    margin-top: 20px;
+    margin-right: 10px;
+}
+.add-site-page{
+   padding: 3px 0 0 0;
+}
+.add-bold{
+    font-weight: 700;
+}
+
+.add-rbody2{
+    display: flex;
+    justify-content: space-between;
+}
+.add-rbody2 button{
+    height: 33px;
+    padding: 4px 10px;
+    border-radius: 3px;
+    background-color: #0D28A6;
+    color: white;
+    border-style: none;
+}
+
+.add-rbody3{
+    width: 95%;
+    height: fit-content;
+    background-color: white;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.add-form{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.add-rbody3 input{
+    height: 30px;
+    width: 50%;
+    margin-right: 275px;
+    margin-top: 9px;
+}
+.add-rbody3 select{
+    height: 30px;
+    width: 50%;
+    margin-right: 275px;
+    margin-top: 9px;
+}
+.add-bold{
+    font-weight: 900;
+}
+.add-rbody4{
+padding-top: 10px;
+}
+.add-cancel-button{
+    padding: 10px;
+    border-color: #0D28A6;
+    background-color: #E5E5E5;
+    border-radius: 3px;
+    color: #0D28A6;
+}
+.add-save-button{
+    padding: 10px;
+    background-color: #0D28A6;
+    border-radius: 3px;
+    color:  white;
+    border-style: none;
 }
