--- a/views/component/addCar.ejs
+++ b/views/component/addCar.ejs
@@ -10,15 +10,16 @@
     <div class="add-rbody3">
         <div class="add-form">
             <p>Nama*</p>
-            <input type="text">
+            <input name="nama" placeholder="Avanza" type="text">
         </div>
         <div class="add-form">
             <p>Sewa Per Hari*</p>
-            <input type="text">
+            <input name="sewa" placeholder="Rp. 0" type="text">
         </div>
         <div class="add-form">
             <p>Ukuran*</p>
-            <select name="" id="">
+            <select name="ukuran" id="">
+                <option selected>Pilih Ukuran</option>
                 <option value="small">small</option>
                 <option value="medium">medium</option>
                 <option value="large">large</option>
@@ -26,11 +27,11 @@
         </div>
         <div class="add-form">
             <p>Foto*</p>
-            <input type="input">
+            <input name="foto" placeholder="images/car01" type="input">
         </div>
     </div>
     <div class="add-rbody4">
         <button onclick="location.href='/cars'" class="add-cancel-button bold">Cancel</button>
-        <button class="add-save-button bold">Save</button>
+        <button type="submit" class="add-save-button bold">Save</button>
     </div>
 </div>
