--- a/views/component/listCars.ejs
+++ b/views/component/listCars.ejs
@@ -9,10 +9,10 @@
         <button onclick="location.href='/cars/create'" type="button" class="bold">+ Add New Car</button>
     </div>
     <div class="rbody3">
-        <button>All</button>
-        <button>Small</button>
-        <button>Medium</button>
-        <button>Large</button>
+        <button onclick="location.href='/cars'" >All</button>
+        <button onclick="location.href='/cars/size?ukuran=small'" >Small</button>
+        <button onclick="location.href='/cars/size?ukuran=medium'" >Medium</button>
+        <button onclick="location.href='/cars/size?ukuran=large'" >Large</button>
     </div>
     <div class="rbody4">
         <% for(var i=0; i < data.length; i++) { %>
@@ -25,8 +25,11 @@
             <p class="thin"><i class="fa fa-clock"></i>updated at <%= data[i].updatedAt.toLocaleString() %></p>
             <p></p>
             <div class="car-button">
-                <button class="delete-button"><i class="fa-regular fa-trash-can"></i> Delete</button>
-                <button class="edit-button"><i class="fa fa-pen"></i> Edit</button>
+                <form action="/cars/delete/<%= data[i].id %>">
+                    <button class="delete-button"><i class="fa-regular fa-trash-can"></i> Delete</button>
+                </form>
+          
+                <button onclick="location.href='/cars/index-updateCars'" class="edit-button"><i class="fa fa-pen"></i> Edit</button>
             </div>
             <p></p>
         </div>
