--- a/views/component/updateCars.ejs
+++ b/views/component/updateCars.ejs
@@ -10,15 +10,16 @@
     <div class="add-rbody3">
         <div class="add-form">
             <p>Nama*</p>
-            <input type="text">
+            <input value="<%= data.ukuran%>" type="text">
         </div>
         <div class="add-form">
             <p>Sewa Per Hari*</p>
-            <input type="text">
+            <input value="<%= data.tarif%>" type="text">
         </div>
         <div class="add-form">
             <p>Ukuran*</p>
             <select name="" id="">
+                <option selected><%= data.ukuran%></option>
                 <option value="small">small</option>
                 <option value="medium">medium</option>
                 <option value="large">large</option>
@@ -26,7 +27,7 @@
         </div>
         <div class="add-form">
             <p>Foto*</p>
-            <input type="input">
+            <input value="<%= data.foto%>" type="input">
         </div>
     </div>
     <div class="add-rbody4">
